[package]
name = "ansible-json-monitor"
version = "1.0.0"
description = "Simple ansible monitoring using json output"
homepage = "https://github.com/okapia/ansible-json-monitor"
authors = ["okapia"]
license = "MIT/Apache-2.0"
edition = "2021"

[[bin]]
name = "ajmon"
path = "src/main.rs"

[dependencies]
itertools = "0.10"
libflate = "1.2"
rayon = "1.5"
regex = "1.5"
serde_json = "1.0"
structopt = "0.3"
chrono = "0.4"
toml = "0.5"
unicode-width = "0.1"

[profile.release]
lto = true
panic = 'abort'
opt-level = 3
codegen-units = 1

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
ajmon = { path = "/usr/bin/ajmon" }
