[package]
name = "ansible-json-monitor"
version = "1.0.1"
description = "Simple ansible monitoring using json output"
homepage = "https://github.com/okapia/ansible-json-monitor"
authors = ["okapia"]
license = "MIT/Apache-2.0"
edition = "2024"

[[bin]]
name = "ajmon"
path = "src/main.rs"

[dependencies]
itertools = "0.14"
libflate = "2.1"
rayon = "1.10"
regex = "1.11"
serde_json = "1.0"
chrono = "0.4"
toml = "0.8"
unicode-width = "0.2"
clap = { version = "4.5", features = ["derive"] }
version-compare = "0.2"

[profile.release]
lto = true
panic = 'abort'
opt-level = 3
codegen-units = 1

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
ajmon = { path = "/usr/bin/ajmon" }
